--- a/index.html
+++ b/index.html
@@ -189,28 +189,28 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Coursera</h3>
                             <div class="subheading mb-3">
-                                <a
+                                <a style="color: #6c757d;"
                                     href="https://github.com/h0-hi3u/Certifications/blob/main/Software_Development_Lifecycle.pdf">Software
                                     Development Lifecycle</a>
                                 <p class="text-primary" style="float: right;">February
                                     2023</p>
                             </div>
                             <div class="subheading mb-3">
-                                <a
+                                <a style="color: #6c757d;"
                                     href="https://github.com/h0-hi3u/Certifications/blob/main/Web_Design_for_Everybody.pdf">Web
                                     Design for Everybody</a>
                                 <p class="text-primary" style="float: right;">November
                                     2022</p>
                             </div>
                             <div class="subheading mb-3">
-                                <a
+                                <a style="color: #6c757d; :hover{color: white;}"
                                     href="https://github.com/h0-hi3u/Certifications/blob/main/Computer_Communications.pdf">Computer
                                     Communications</a>
                                 <p class="text-primary" style="float: right;">July
                                     2022</p>
                             </div>
                             <div class="subheading mb-3">
-                                <a
+                                <a style="color: #6c757d;"
                                     href="https://github.com/h0-hi3u/Certifications/blob/main/Academic_Skills_for_University_Success.pdf">Academic
                                     Skills for University Success</a>
                                 <p class="text-primary" style="float: right;">April
